Fixed scaling on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -102,15 +102,6 @@ body {
 	width: 230px;
 }*/
 
-
-#location {
-	top: 70%;
-	left: 50%;
-	width: 100%;
-	position: fixed;
-	transform: translateX(-50%);
-}
-
 #footer {
 	font-size: 25px;
 	font-family: 'Lato', sans-serif;
@@ -149,6 +140,7 @@ body {
 
 	#temperature {
 		width: 300px;	
+		transform: translateX(-50%) translateY(+100%);
 	}
 
 }
